--- a/translationos.yml
+++ b/translationos.yml
@@ -9,6 +9,8 @@ files:
   - translation: professional
     service_type: premium
     source_pattern: src/res/en/*.json
+    source_exclude:
+      - src/res/en/bbb.json
     source_locale: en-GB
     target_pattern: src/res/{{locale}}/{{original_file}}
     target_locales: [ 'pt-BR', 'it-IT' ]
