--- a/translationos.yml
+++ b/translationos.yml
@@ -1,6 +1,8 @@
 on:
   branches:
-    - dev
+    - main
+    - feature/test
+    - feature-test-6
 pull_requests:
   mode: pr_per_lang
 translationos:
