--- a/translationos.yml
+++ b/translationos.yml
@@ -3,7 +3,7 @@ on:
     - main
     - feature/test
     - feature/test-6
-  wait_interval: 10
+  wait_interval: 20s
 pull_requests:
   mode: pr_per_lang
 translationos:
