--- a/translationos.yml
+++ b/translationos.yml
@@ -5,7 +5,7 @@ on:
     - feature/test-6
   wait_interval: 50s
 pull_requests:
-  mode: pr_all_langs
+  mode: pr_per_langs
 translationos:
   api_key_secret: MY_TOS_KEY
 files:
