--- a/translationos.yml
+++ b/translationos.yml
@@ -8,7 +8,9 @@ translationos:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/en.json
+    source_pattern: src/res/*.json
     source_locale: en-GB
+    source_exclude:
+      - src/res/es.json
     target_pattern: src/res/{{locale}}.json
     target_locales: [ 'it-IT', 'pt-BR' ]
