--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "star": "node server.js",
+    "start": "node index.js",
     "devStart": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@translated/db-connection": "^5.4.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.11.12"
+    "express-validator": "^6.14.2",
+    "mongoose": "^5.11.12",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^16.0.2",
     "nodemon": "^2.0.7"
   }
 }
