--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.0",
     "express-validator": "^6.14.2",
+    "loadash": "^1.0.0",
     "mongoose": "^5.11.12",
     "mysql": "^2.18.1"
   },
