--- a/translationos.yml
+++ b/translationos.yml
@@ -15,7 +15,7 @@ files:
     source_exclude:
       - src/res/es.json
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT', 'fr-FR']
+    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
