--- a/translationos.yml
+++ b/translationos.yml
@@ -2,7 +2,7 @@ on:
   branches:
     - main
     - feature/test
-  wait_interval: 40s
+  wait_interval: 20s
 pull_requests:
   mode: pr_per_lang
 translationos:
@@ -15,7 +15,7 @@ files:
     source_exclude:
       - src/res/es.json
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR']
+    target_locales: [ 'it-IT']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
