--- a/translationos.yml
+++ b/translationos.yml
@@ -15,10 +15,12 @@ files:
     source_exclude:
       - src/res/es.json
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT']
+    target_locales: [ 'it-IT', 'fr-FR']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
     source_locale: en-GB,
+    source_exclude:
+      - doc/docs.md
     target_pattern: doc/{{original_file_name}}_{{locale}}.md
     target_locales: [ 'it-IT', 'pt-PT']
