--- a/translationos.yml
+++ b/translationos.yml
@@ -15,7 +15,7 @@ files:
     source_exclude:
       - src/res/es.json
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR']
+    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR', 'pt-PT']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
@@ -23,4 +23,4 @@ files:
     source_exclude:
       - doc/docs.md
     target_pattern: doc/{{original_file_name}}_{{locale}}.md
-    target_locales: [ 'it-IT', 'pt-PT']
+    target_locales: [ 'it-IT', 'pt-PT', 'fr-FR', 'ar-AR']
