--- a/translationos.yml
+++ b/translationos.yml
@@ -11,12 +11,12 @@ translationos:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/*.json
+    source_pattern: src/res/*.txt
     source_locale: en-GB
     source_exclude:
       - src/res/es.json
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR', 'pt-PT', 'ar-AR']
+    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR', 'pt-PT', 'ar-AR', 'br-BR']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
