--- a/translationos.yml
+++ b/translationos.yml
@@ -16,7 +16,7 @@ files:
     source_exclude:
       - src/res/es.json
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR', 'pt-PT', 'ar-AR', 'br-BR']
+    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR', 'pt-PT', 'ar-AR', 'br-BR', 'ch-CH']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
