--- a/translationos.yml
+++ b/translationos.yml
@@ -14,7 +14,7 @@ files:
     source_pattern: src/res/*.txt
     source_locale: en-GB
     target_pattern: src/res/{{locale}}.json
-    target_locales: [ 'it-IT', 'fr-FR', 'pr-PR', 'pt-PT', 'ar-AR', 'br-BR', 'ch-CH', 'jp-JP', 'tu-TU']
+    target_locales: [ 'it-IT']
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
