--- a/translationos.yml
+++ b/translationos.yml
@@ -11,7 +11,7 @@ translationos:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/*.txt
+    source_pattern: src/res/*.json
     source_locale: en-GB
     target_pattern: src/res/{{locale}}.json
     target_locales: [ 'fr-FR']
