--- a/translationos.yml
+++ b/translationos.yml
@@ -18,7 +18,7 @@ files:
   - translation: professional
     service_type: premium
     source_pattern: doc/*.md
-    source_locale: en-GB,
+    source_locale: en-GB
     source_exclude:
       - doc/docs.md
     target_pattern: doc/{{original_file_name}}_{{locale}}.md
