--- a/translationos.yml
+++ b/translationos.yml
@@ -11,15 +11,19 @@ translationos:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/en.json
+    source_pattern: src/loc/en.json
     source_locale: en-GB
-    target_pattern: src/res/{{locale}}.json
-    target_locales: ['fr-FR', 'it-IT', 'pt-PT', 'ar-EG']
+    target_pattern: src/loc/{{locale}}.json
+    target_locales: ['fr-FR', 'de-DE']
   - translation: professional
     service_type: premium
-    source_pattern: doc/*.md
+    source_pattern: doc/!(*_*).md
     source_locale: en-GB
-    source_exclude:
-      - doc/docs.md
     target_pattern: doc/{{original_file_name}}_{{locale}}.md
-    target_locales: ['it-IT', 'fr-FR']
+    target_locales: ['pt-PT', 'pl-PL']
+  - translation: professional
+    service_type: premium
+    source_pattern: src/res/en/messages.yml
+    source_locale: en-US
+    target_pattern: src/res/{{locale}}/{{original_file}}
+    target_locales: ['da-DK', 'sv-SE']
