--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "express-validator": "^6.14.2",
     "loadash": "^1.0.0",
     "mongoose": "^5.11.12",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "redis-smq": "^7.0.7",
+    "redis-smq-common": "^1.0.4",
+    "rsmq": "^0.12.4"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
