--- a/src/res/strings-it.properties
+++ b/src/res/strings-it.properties
@@ -1,3 +1,3 @@
 welcome.message=Benvenuti al nostro
 welcome.button=In casa
-welcome.tooltip=messaggio di benvenuto
+welcome.tooltip=Un caloroso messaggio di benvenuto
