--- a/translationos.yml
+++ b/translationos.yml
@@ -1,8 +1,9 @@
 on:
   branches:
     - feature/**
+  wait_interval: 40s
 pull_requests:
-  mode: pr_per_langs
+  mode: pr_per_lang
 files:
   - translation: professional
     service_type: premium
