--- a/translationos.yml
+++ b/translationos.yml
@@ -1,7 +1,7 @@
 on:
   branches:
     - feature/**
-  wait_interval: 90s
+  wait_interval: 20s
 pull_requests:
   mode: pr_per_lang
 files:
@@ -10,4 +10,4 @@ files:
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}.properties
-    target_locales: ['fr-FR']
+    target_locales: ['fr-FR', 'it-IT']
