--- a/src/res/strings-fr.properties
+++ b/src/res/strings-fr.properties
@@ -1,3 +1,3 @@
 welcome.message=Bienvenue dans notre
-welcome.button=Stay
-welcome.tooltip=Message de bienvenue.
+welcome.button=Rester
+welcome.tooltip=Un message de bienvenue froid
