--- a/translationos.yml
+++ b/translationos.yml
@@ -3,7 +3,7 @@ on:
     - feature/**
   wait_interval: 20s
 pull_requests:
-  mode: pr_all_langs
+  mode: pr_per_lang
 files:
   - translation: professional
     service_type: premium
@@ -11,3 +11,9 @@ files:
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}.properties
     target_locales: ['de-DE', 'ru-RU']
+  - translation: professional
+    service_type: premium
+    source_pattern: src/res/!(*-*).json
+    source_locale: en-GB
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}.properties
+    target_locales: ['de-DE', 'qu-PE']
