--- a/translationos.yml
+++ b/translationos.yml
@@ -15,5 +15,5 @@ files:
     service_type: premium
     source_pattern: src/res/!(*-*).json
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}.properties
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}.json
     target_locales: ['de-DE', 'qu-PE']
