--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-validator": "^6.14.2",
     "loadash": "^1.0.0",
+    "memoizee": "^0.4.15",
     "mongoose": "^5.11.12",
     "mysql": "^2.18.1",
     "redis-smq": "^7.0.7",
