--- a/translationos.yml
+++ b/translationos.yml
@@ -17,3 +17,9 @@ files:
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}.json
     target_locales: ['de-DE', 'qu-PE']
+  - translation: professional
+    service_type: premium
+    source_pattern: src/res/!(*-*).md
+    source_locale: en-GB
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}.md
+    target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU']
