--- a/translationos.yml
+++ b/translationos.yml
@@ -15,16 +15,16 @@ files:
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}.properties
-    target_locales: ['de-DE', 'ru-RU']
+    target_locales: ['de-DE', 'ru-RU', 'et-ET']
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).json
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}.json
-    target_locales: ['de-DE', 'qu-PE']
+    target_locales: ['de-DE', 'qu-PE', 'et-ET', 'dd-EE']
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).md
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}.md
-    target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU']
+    target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU', 'dd-EE', 'gg-GG']
