--- a/translationos.yml
+++ b/translationos.yml
@@ -4,6 +4,11 @@ on:
   wait_interval: 10s
 pull_requests:
   mode: pr_per_lang
+  labels:
+    - localization
+    - documentation
+    - translation
+    - bug
 files:
   - translation: professional
     service_type: premium
