--- a/translationos.yml
+++ b/translationos.yml
@@ -1,3 +1,8 @@
+on:
+  branches:
+    - feature/**
+pull_requests:
+  mode: pr_per_lang
 files:
   - translation: professional
     service_type: premium
