--- a/translationos.yml
+++ b/translationos.yml
@@ -8,7 +8,7 @@ files:
     service_type: premium
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}-{{language}}.properties
+    target_pattern: src/res/{{original_file_name}}-{{language}}:{{county_2}}-{{country}}.properties
     target_locales: ['de-DE', 'ru-RU']
   - translation: professional
     service_type: premium
