--- a/translationos.yml
+++ b/translationos.yml
@@ -3,6 +3,7 @@ on:
     - feature/**
 pull_requests:
   mode: pr_per_lang
+  automerge: true
 files:
   - translation: professional
     service_type: premium
