--- a/translationos.yml
+++ b/translationos.yml
@@ -10,7 +10,7 @@ files:
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
-    target_locales: ['de-DE', 'ru-RU']
+    target_locales: ['de-DE']
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).json
