--- a/translationos.yml
+++ b/translationos.yml
@@ -1,3 +1,6 @@
+on:
+  branches:
+    - feature/**
 pull_requests:
   mode: pr_per_lang
   automerge: true
@@ -7,7 +10,7 @@ files:
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
-    target_locales: ['de-DE']
+    target_locales: ['de-DE', 'it-IT']
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).json
