--- a/translationos.yml
+++ b/translationos.yml
@@ -11,6 +11,7 @@ files:
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
     target_locales: ['de-DE', 'it-IT']
+    preprocessing: true
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).json
