--- a/translationos.yml
+++ b/translationos.yml
@@ -24,3 +24,10 @@ files:
     target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.md
     target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU', 'dd-EE', 'gg-GG', 'es-ES']
     preprocessing: true
+  - translation: professional
+    service_type: premium
+    source_pattern: src/res/!(*-*).docx
+    source_locale: en-GB
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.md
+    target_locales: ['de-DE', 'it-IT']
+    preprocessing: true
