--- a/translationos.yml
+++ b/translationos.yml
@@ -28,6 +28,6 @@ files:
     service_type: premium
     source_pattern: src/res/!(*-*).docx
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.md
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.docx
     target_locales: ['de-DE', 'it-IT']
     preprocessing: true
