--- a/translationos.yml
+++ b/translationos.yml
@@ -21,13 +21,13 @@ files:
     service_type: premium
     source_pattern: src/res/!(*-*).md
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.md
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}-{{language}}.md
     target_locales: ['de-DE', 'qu-PE', 'fr-FR', 'ar-EG', 'ru-RU', 'dd-EE', 'gg-GG', 'es-ES']
     preprocessing: true
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).docx
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{lang_2}}:{{language}}.docx
+    target_pattern: src/res/{{original_file_name}}-{{lang_2}}-{{language}}.docx
     target_locales: ['de-DE', 'it-IT']
     preprocessing: true
