--- a/translationos.yml
+++ b/translationos.yml
@@ -6,11 +6,10 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/!(*-*).properties
+    source_pattern: src/res/!(*-*).dog
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
+    target_pattern: src/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.dog
     target_locales: ['de-DE', 'it-IT']
-    preprocessing: true
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).json
