--- a/translationos.yml
+++ b/translationos.yml
@@ -6,9 +6,9 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/!(*-*).properties
+    source_pattern: src/**/others/**/res/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
+    target_pattern: src/**/others/**/res/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
     target_locales: ['de-DE', 'it-IT']
     preprocessing: true
   - translation: professional
