--- a/translationos.yml
+++ b/translationos.yml
@@ -8,8 +8,8 @@ files:
     service_type: premium
     source_pattern: src/**/others/**/res/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/**/others/**/res/{{locale}}/{{original_file_name}}-{{language}}-{{countr_2}}-{{country}}.properties
-    target_locales: ['de-DE', 'it-IT']
+    target_pattern: src/**/others/**/res/de-DE/strings_de.properties
+    target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
     service_type: premium
