--- a/translationos.yml
+++ b/translationos.yml
@@ -6,9 +6,9 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/**/others/**/res/!(*-*).properties
+    source_pattern: src/**/others/**/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/**/others/**/de-DE/strings_de.properties
+    target_pattern: src/**/others/**/res/de-DE/strings_de.properties
     target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
