--- a/translationos.yml
+++ b/translationos.yml
@@ -8,7 +8,7 @@ files:
     service_type: premium
     source_pattern: src/**/others/**/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/**/others/**/res/de-DE/strings_de.properties
+    target_pattern: src/{{locale}}-{{lang2}}/**/others/**/de-DE/strings_de.properties
     target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
