--- a/translationos.yml
+++ b/translationos.yml
@@ -8,7 +8,7 @@ files:
     service_type: premium
     source_pattern: src/**/others/**/*
     source_locale: en-GB
-    target_pattern: src/**/others/**/{{locale}}/strings_{{lang_2}}.properties
+    target_pattern: src/**/others/**/de-DE/strings_de.properties
     target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
