--- a/translationos.yml
+++ b/translationos.yml
@@ -8,7 +8,7 @@ files:
     service_type: premium
     source_pattern: src/**/*.properties
     source_locale: en-GB
-    target_pattern: src/**/{{locale}}/{{original-file-name}}_{{lang_2}}.md
+    target_pattern: src/**/{{original_file_name}}_{{lang_2}}.md
     target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
