--- a/translationos.yml
+++ b/translationos.yml
@@ -6,7 +6,7 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/**/*.properties
+    source_pattern: src/**/!(*-*).properties
     source_locale: en-GB
     target_pattern: src/**/{{original_file_name}}_{{lang_2}}.md
     target_locales: ['de-DE']
