--- a/src/res/strings-pt.properties
+++ b/src/res/strings-pt.properties
@@ -1,3 +1,3 @@
 welcome.message=Bem-vindo à nossa aplicação
 welcome.button=Permanecer
-welcome.tooltip=Uma calorosaa mensagem de boas-vindas
+welcome.tooltip=Uma calorosa mensagem de boas-vindas
