--- a/translationos.yml
+++ b/translationos.yml
@@ -8,9 +8,9 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/**/!(*-*).properties
+    source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/**/{{original_file_name}}_{{lang_2}}.md
+    target_pattern: src/res/{{original_file_name}}_{{lang_2}}.md
     target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
