--- a/translationos.yml
+++ b/translationos.yml
@@ -10,7 +10,7 @@ files:
     service_type: premium
     source_pattern: src/res/!(*-*).properties
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}_{{lang_2}}.md
+    target_pattern: src/res/{{original_file_name}}_{{lang_2}}.properties
     target_locales: ['de-DE']
     preprocessing: true
   - translation: professional
