--- a/src/res/strings.properties
+++ b/src/res/strings.properties
@@ -1,3 +1,3 @@
 welcome.message=Welcome to our app
 welcome.button=Stay
-welcome.tooltip=Nice weather in Germany
+welcome.tooltip=Good weather in Germany
