--- a/translationos.yml
+++ b/translationos.yml
@@ -3,15 +3,15 @@ on:
     - feature/**
     - fix*
 pull_requests:
-  mode: pr_per_lang
+  mode: pr_all_langs
   automerge: merge
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/!(*-*).properties
+    source_pattern: src/res/!(*-*).yml
     source_locale: en-GB
-    target_pattern: src/res/{{original_file_name}}_{{lang_2}}.properties
-    target_locales: ['de-DE', 'it-IT', 'fr-FR']
+    target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
+    target_locales: ['de-DE', 'it-IT', 'fr-FR', 'es-ES']
     preprocessing: true
   - translation: professional
     service_type: premium
