--- a/translationos.yml
+++ b/translationos.yml
@@ -8,7 +8,7 @@ pull_requests:
 files:
   - translation: professional
     service_type: premium
-    source_pattern: src/res/!(*-*).yml
+    source_pattern: src/res/*.yml
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
     target_locales: ['de-DE', 'it-IT', 'fr-FR', 'es-ES']
