--- a/src/res/en-shrinked.yml
+++ b/src/res/en-shrinked.yml
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: alex
   comment: Button tooltip, make it short
-  value: Help about this application
+  value: Help about this applications
