Delivery of es-ES: src/res/en-shrinked_es.yml

--- a/src/res/en-shrinked_es.yml
+++ b/src/res/en-shrinked_es.yml
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: victor alonso lopez mendez Nombre
   comment: Botón de información sobre herramientas, hágalo corto
-  value: Acerca de esta aplicación
+  value: Ayuda sobre estas aplicaciones
