Delivery of it-IT: src/res/en-shrinked_it.yml

--- a/src/res/en-shrinked_it.yml
+++ b/src/res/en-shrinked_it.yml
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: alex
   comment: Tooltip del pulsante, rendilo breve
-  value: Informazioni sull'applicazione
+  value: Aiuto su questa applicazione
