Delivery of de-DE: src/res/en-shrinked_de.yml

--- a/src/res/en-shrinked_de.yml
+++ b/src/res/en-shrinked_de.yml
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: @Alex.......und schon wieder Hihi
   comment: Schaltfläche Tooltip, machen Sie es kurz
-  value: Hilfe zu dieser Anwendung
+  value: Hilfe zu diesen Anwendungen
