--- a/translationos.yml
+++ b/translationos.yml
@@ -12,6 +12,7 @@ files:
     source_locale: en-GB
     target_pattern: src/res/{{original_file_name}}_{{lang_2}}.yml
     target_locales: ['de-DE', 'it-IT', 'fr-FR', 'es-ES']
+    preprocessing: true
   - translation: professional
     service_type: premium
     source_pattern: src/res/!(*-*).json
