--- a/src/res/en-shrinked_de.yml
+++ b/src/res/en-shrinked_de.yml
@@ -14,11 +14,11 @@ dann den Workback-Zeitplan in den Teilaufgaben unten, um sie von einer Gelegenhe
 '"{projectName}" and {count} other projects will be moved to the References [...]':
   author: lesialiao
   comment: Verwenden Sie die gleiche Übersetzung wie 'Referenzen [Substantiv]'
-  fallback_key: '"{projectName}" und {count} andere Projekte werden in die unterstützende Arbeit verschoben werden [...]'
+  fallback_key: '"{projectName}" und {count} andere Projekte werden in die unterstützende Arbeit verschoben [...]'
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
     count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden.'
 '"{projectName}" and {count} other projects will be moved to the References section once your changes are saved. Projects [...]':
   author: lesialiao
@@ -27,21 +27,21 @@ dann den Workback-Zeitplan in den Teilaufgaben unten, um sie von einer Gelegenhe
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
     count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Referenzen verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
 '"{projectName}" and {count} other projects will be moved to the Supporting work [...]':
   author: phillipyu
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Unterstützende Arbeit verschoben, sobald Ihre Änderungen gespeichert wurden.'
     count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden.'
 '"{projectName}" and {count} other projects will be moved to the Supporting work section once your changes are saved. Projects [...]':
   author: phillipyu
   locations:
     - asana2/asana/web/goals/views/goal_set_metric_dialog/goal_set_metric_warning_banner.ts
   value:
-    count_one: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
+    count_one: '"{projectName}" und {count} anderes Projekt werden in den Abschnitt Unterstützende Arbeit verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
     count_other: '"{projectName}" und {count} andere Projekte werden in den Abschnitt Unterstützende Arbeiten verschoben, sobald Ihre Änderungen gespeichert wurden. Projekte, auf die Sie keinen Zugriff haben, sind ebenfalls betroffen.'
 '"{ruleName}" added to this {variant}':
   author: alexryan
@@ -81,14 +81,14 @@ Siehe die folgenden Unteraufgaben für einen vorgeschlagenen Workback-Zeitplan:'
     - asana2/luna-ui/src/components/widgets/hearts/heart_button_tooltip_anchor.ts
   variants:
     _default:
-      count_one: <div>Du</div> {listOfNames} … und {count} {variant} sonstiges
-      count_other: <div>Du</div> {listOfNames} … und {count} andere all {variant} das
+      count_one: <div>Du</div> {listOfNames} … and {count} other all {variant} this
+      count_other: <div>Du</div> {listOfNames} … und {count} weitere {variant} dies
     liked:
-      count_one: <div>Du</div> {listOfNames} … und {count} andere mochten das
-      count_other: <div>Du</div> {listOfNames} … und {count} andere mochten das alle
+      count_one: <div>Du</div> {listOfNames} … und {count} andere mochten dies
+      count_other: <div>Du</div> {listOfNames} … und {count} andere mochten dies alle
     '{heart}':
-      count_one: <div>Du</div> {listOfNames} … und {count} {heart} sonstiges
-      count_other: <div>Du</div> {listOfNames} … und {count} andere all {heart} das
+      count_one: <div>Du</div> {listOfNames} … und {count} andere alle {heart} dies
+      count_other: <div>Du</div> {listOfNames} … und {count} andere {heart} dies
 about-text:
   author: @Alex.......und schon wieder Hihi
   comment: Button-Text, max. 2 Wörter
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: @Alex.......und schon wieder Hihi
   comment: Schaltfläche Tooltip, machen Sie es kurz
-  value: Hilfe zu diesen Anwendungen
+  value: Hilfe zu dieser Anwendung
