Delivery of fr-FR: src/res/en-shrinked_fr.yml

--- a/src/res/en-shrinked_fr.yml
+++ b/src/res/en-shrinked_fr.yml
@@ -96,4 +96,4 @@ about-text:
 about-tooltip:
   author: alex
   comment: Bouton info-bulle, faites court
-  value: Aide sur cette application
+  value: À propos de cette application
